[package]
name = "sqlite_clone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
educe = "0.4.18"
serde = { version = "1.0.126", features = ["derive"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
